--- a/bucket.html
+++ b/bucket.html
@@ -24,7 +24,7 @@
             <!--Show total number of coffee added to bucket here, do not add anything only Total count. Not even "Count - 5" but  only number like this "5" -->
         </div>
     </div>
-    <div id="myback"><img src="./back.gif">Menu page</div>
+    <div id="myback"><img src="./images/back.gif">Menu page</div>
     <div id="total-div">
 
         <h3 id="totalamount">Total Amount</h3>
