coffeeapp new  commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0px;
         }
         body{
-        background-image: url("coffee.png");
+        background-image: url("coffee.jpg");
         background-repeat: no-repeat;
         background-size:100vw 100vh;
         }
@@ -89,6 +89,6 @@
 <script>
     let h4=document.querySelector("label");
     h4.addEventListener("click",function(){
-        window.location.href="./main.html";
+        window.location.href="./component/main.html";
     })
 </script>
