coffeeapp new  commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0px;
         }
         body{
-        background-image: url("coffee.jpg");
+        background-image: url("./images/coffee.jpg");
         background-repeat: no-repeat;
         background-size:100vw 100vh;
         }
